--- a/.github/workflows/webhook-writer.yml
+++ b/.github/workflows/webhook-writer.yml
@@ -1,33 +1,24 @@
-﻿name: Write webhook payload
+﻿name: GitHub Webhook Writer
 
 on:
   push:
-  pull_request:
-
-permissions:
-  contents: write  # Needed to push changes
+    branches:
+      - main
 
 jobs:
-  write-event:
+  write-webhook:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          token: ${{ secrets.MY_PAT_TOKEN }}  # ✅ Use your PAT secret here
+          node-version: '18'
 
-      - name: Create event directory
-        run: mkdir -p .github/events
+      - name: Install dependencies
+        run: npm install
 
-      - name: Write event payload
-        run: |
-          echo '${{ toJson(github.event) }}' > .github/events/latest-event.json
-
-      - name: Commit and push event file
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .github/events/latest-event.json
-          git diff --cached --quiet || git commit -m "Update event payload"
-          git push https://x-access-token:${{ secrets.MY_PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref_name }}
+      - name: Run webhook writer script
+        run: node webhook.js
