Add PR event trigger to workflow

--- a/.github/workflows/webhook-writer.yml
+++ b/.github/workflows/webhook-writer.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   write-webhook:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
