--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "node-fetch": "^2.7.0",
-    "openai": "^4.98.0",
+    "openai": "^3.5-turbo",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12"
   },
