--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "ts-node .github/workflows/poller.ts"
+    "start": "node server.js",
+    "poll": "ts-node .github/workflows/poller.ts",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@octokit/rest": "^20.1.2",
     "axios": "^1.5.0",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "node-fetch": "^2.7.0",
     "openai": "^4.24.0",
     "passport": "^0.6.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "simple-git": "^3.27.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
@@ -22,6 +26,7 @@
     "@types/node": "^22.15.17",
     "@types/node-fetch": "^2.6.12",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
