--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "auto-refactor-backend",
   "version": "1.0.0",
+  "description": "Backend server for automatic AI code refactoring using GitHub webhooks",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "poll": "ts-node .github/workflows/poller.ts",
-    "dev": "nodemon server.js"
+    "test": "jest"
   },
+  "keywords": [],
+  "author": "pratiksha2828",
+  "license": "MIT",
   "dependencies": {
     "@octokit/rest": "^20.1.2",
     "axios": "^1.5.0",
