--- a/package.json
+++ b/package.json
@@ -1,40 +1,32 @@
 {
-  "name": "auto-refactor-backend",
+  "name": "algorythm",
   "version": "1.0.0",
-  "description": "Backend server for automatic AI code refactoring using GitHub webhooks",
-  "type": "module",
-  "main": "server.js",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "poll": "ts-node .github/workflows/poller.ts",
-    "test": "jest"
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+    "build": "npm run build --prefix frontend",
+    "start": "node backend/server.js",
+    "dev": "npm run dev --prefix backend"
+  },
+  "description": "",
+  "main": "github.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://pratiksha2828@github.com/pratiksha2828/AlgoRythm.git"
   },
   "keywords": [],
-  "author": "pratiksha2828",
-  "license": "MIT",
-  "dependencies": {
-    "@octokit/rest": "^20.1.2",
-    "axios": "^1.5.0",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "node-fetch": "^2.7.0",
-    "openai": "^4.24.0",
-    "passport": "^0.6.0",
-    "passport-github2": "^0.1.12",
-    "simple-git": "^3.27.0"
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/pratiksha2828/AlgoRythm/issues"
   },
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.15.17",
-    "@types/node-fetch": "^2.6.12",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "ts-jest": "^29.3.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+  "homepage": "https://github.com/pratiksha2828/AlgoRythm#readme",
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12"
   }
 }
