--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "axios": "^1.12.2",
+    "crypto-js": "^4.2.0",
+    "d3-geo": "^3.1.1",
+    "d3-zoom": "^3.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
-    "mongoose": "^8.18.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1"
+    "react-router-dom": "^7.8.1",
+    "react-simple-maps": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
