--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.19.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12"
   },
