--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,18 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.4",
+    "@octokit/rest": "^22.0.0",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.3",
+    "express": "^5.10.0",
     "express-session": "^1.18.2",
-    "mongoose": "^8.19.1",
+    "mongoose": "^8.19.2",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "puppeteer": "^23.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
